# personal-website

./: .gitignore  Makefile  README.md  contact.md  drums.md  home.md  index.md  music.md  personal-website.cabal  setup.md  site.hs
css/: default.css
docs/: CNAME  README.html  archive.html  blog.html  contact.html  drums.html  home.html  index.html  music.html  photos.html  setup.html
docs/css/: default.css
docs/md/: contact.html  index.html
docs/posts/: 2015-08-23-example.html
images/: nvim_config.txt  sway_config.txt
md/: blog.md  contact.md  index.md  music.md  photos.md  setup.md
templates/: default.html
