name:                personal-website
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://www.tomhenry.xyz
license:             GPL3 
license-file:        LICENSE
author:              TomHenry Reagan
maintainer:          tomhenryreagan
copyright:           2022-2024 TomHenry Reagan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable personal-website
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
